@@ -12,9 +12,49 @@
 #ifndef _WX_TOOLBAR_H_BASE_
 #define _WX_TOOLBAR_H_BASE_
 
-#include "wx/tbarbase.h"     // the base class for all toolbars
+#include "wx/defs.h"
+
+// ----------------------------------------------------------------------------
+// wxToolBar style flags
+// ----------------------------------------------------------------------------
+
+enum
+{
+    // lay out the toolbar horizontally
+    wxTB_HORIZONTAL  = wxHORIZONTAL,    // == 0x0004
+
+    // lay out the toolbar vertically
+    wxTB_VERTICAL    = wxVERTICAL,      // == 0x0008
+
+    // show 3D buttons (wxToolBarSimple only)
+    wxTB_3DBUTTONS   = 0x0010,
+
+    // "flat" buttons (Win32/GTK only)
+    wxTB_FLAT        = 0x0020,
+
+    // dockable toolbar (GTK only)
+    wxTB_DOCKABLE    = 0x0040,
+
+    // don't show the icons (they're shown by default)
+    wxTB_NOICONS     = 0x0080,
+
+    // show the text (not shown by default)
+    wxTB_TEXT        = 0x0100,
+
+    // don't show the divider between toolbar and the window (Win32 only)
+    wxTB_NODIVIDER   = 0x0200,
+
+    // no automatic alignment (Win32 only, useless)
+    wxTB_NOALIGN     = 0x0400,
+
+    // show the text and the icons alongside, not vertically stacked (Win32/GTK)
+    wxTB_HORZ_LAYOUT = 0x0800,
+    wxTB_HORZ_TEXT   = wxTB_HORZ_LAYOUT | wxTB_TEXT
+};
 
 #if wxUSE_TOOLBAR
+    #include "wx/tbarbase.h"     // the base class for all toolbars
+
     #if !wxUSE_TOOLBAR_NATIVE && !defined(__WXUNIVERSAL__)
         #include "wx/tbarsmpl.h"
 
